src/pages/history/history.scss
page-history {
  .history-cards{
    margin-top:60%;
    .history-card{
      padding:15px 26px;
      height: 66px;
      width:304px;
      margin: 12px auto;
      display:flex;
      p{
        margin: auto 0;
        width:80%;
      }
      div{
        margin: auto 0 auto auto;
        width: 20%;
        p{
          text-align:center;
        }
      }
    }
  }
    .scroll-background{
        background:#59A9E4;
    }
    .background{
      position: absolute;
      top:0;
      left:0;
      z-index: -1;
    }
    .No-Achievements-Title{
        font-family: Lato;
        font-size: 30px;
        color: $cerulean;
        width: 83.7%;
        text-align: left;
        margin-top: 285px;
        margin-left: 11.5%;
    }
    .No-Achieve-Description{
        font-size: 22px;
        font-family: Lato;
        color: $dark-grey;
        width: 81.7%;
        text-align: left;
        margin-left: 11.5%;
    }

    .trophy-circle{
        margin-top: 25px;
        margin-left: 149px;
        width: 202px;
        height: 197px;
        &.show{
          background-image: url('../assets/svgs/TrophyAndCircle.svg')
        }
    }
    .Achievements-Title{
        font-family: Lato;
        font-size: 30px;
        color: $cerulean;
        width: 83.7%;
        text-align: left;
        margin-top: 45px;
        margin-left: 11.5%;
    }
    .Achieve-Description{
        font-size: 22px;
        font-family: Lato;
        color: $dark-grey;
        width: 82.1%;
        text-align: left;
        margin-left: 11.5%;
    }

    .habit{
      display: flex;
        width: 81.2%;
        height: 66px;
        margin-top: 21px;
        margin-left: 41px;
    }

    .achievement-name{
        flex:80%;
        font-family: Lato;
        font-size: 18px;
        margin: auto auto auto 35px;
        color: $dark-grey;
    }
    .achievement-streak-container{
      margin: auto 27px auto auto;
      text-align: center;
      .achievement-streak{
        font-family: Lato;
        font-size: 30px;
        color: $dark-grey;
      }
      .days{
        font-family: Lato;
        font-size: 12px;
        color: $dark-grey;
      }
    }

    .achievement{
        margin-top: 5px;
    }
}

